update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -7,6 +7,9 @@ contributor:
     deathdate: 1942
     gutenberg_agent_id: '56581'
     url: http://www.gutenberg.org/2009/agents/56581
+covers:
+- cover_type: archival
+  image_path: 72186-h/images/cover.jpg
 creator:
   author:
     agent_name: Fitzhugh, Percy Keese
@@ -20,6 +23,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2132
     wikipedia: https://en.wikipedia.org/wiki/Percy_Keese_Fitzhugh
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72186#Westy-Martin-on-the-Santa-Fe-Trail
 gutenberg_issued: '2023-11-21'
 identifiers:
   gutenberg: '72186'
